updating readme and JS

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ div.row {
 <body >
 <div class="container-fluid">
 <div style="padding: 10px">
-<h1>FCS Data Fitting</h1>
+<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="">Read the documentation and training videos.</a> - <a href="">How to cite.</a></p>
+
 </div>
 <div class="row">
   <div class="col-xl-3" style="min-width: 470px;">
@@ -258,6 +259,8 @@ div.row {
 <script src="scripts/main.js"></script>
 <script src="scripts/fitting_method_se.js"></script>
 <script src="scripts/impt_csv.js"></script>
+<script src="scripts/impt_fcs.js"></script>
+<script src="scripts/impt_sin.js"></script>
 <script src="scripts/plotting_fns.js"></script>
 <script src="scripts/interface.js"></script>
 <script src="scripts/controller.js"></script>
