additional updates to integrate manual

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ div.row {
 <body >
 <div class="container-fluid">
 <div style="padding: 10px">
-<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="">Read the documentation and training videos.</a> - <a href="">How to cite.</a></p>
+<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#cite">How to cite.</a></p>
 
 </div>
 <div class="row">
