--- a/manual/manual.html
+++ b/manual/manual.html
@@ -76,7 +76,7 @@ FoCuS-fit-JS has been designed to make it as easy as possible to process and ana
 <div class="col-md-2 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            FoCuS-fit-JS is a javascript browser based software for fitting correlated FCS (Fluorescence Correlation Spectroscopy) curves.</p>
           </div>
                 <div class="sidebar-module">
                   <h4>Sections</h4>
