futher manual edits

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ div.row {
 <body >
 <div class="container-fluid">
 <div style="padding: 10px">
-<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#cite">How to cite.</a></p>
+<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#How to Cite">How to cite.</a></p>
 
 </div>
 <div class="row">
@@ -124,9 +124,9 @@ div.row {
           <select class="form-control form-control" id="equation" name="equation" onchange="react_to_fit_change();">
             <option value="1">Equation 1A</option>
             <option value="2">Equation 1B</option>
-            <option value="3">GS neuron</option>
-            <option value="4">Vesicle Diffusion</option>
-            <option value="5">PB Correction</option>
+            <!-- <option value="3">GS neuron</option> -->
+            <!-- <option value="4">Vesicle Diffusion</option> -->
+            <!-- <option value="5">PB Correction</option> -->
           </select>
         </div>
          <div class="input-group-prepend">
