--- a/manual/manual.html
+++ b/manual/manual.html
@@ -45,13 +45,7 @@
 
     <div class="blog-masthead">
       <div class="container">
-        <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">New features</a>
-          <a class="blog-nav-item" href="#">Press</a>
-          <a class="blog-nav-item" href="#">New hires</a>
-          <a class="blog-nav-item" href="#">About</a>
-        </nav>
+      
       </div>
     </div>
 <div class="container-fluid">
@@ -93,7 +87,8 @@ FoCuS-fit-JS has been designed to make it as easy as possible to process and ana
                   <h4>Links</h4>
                   <ol class="list-unstyled">
                     <li><a href="https://github.com/dwaithe/FCSfitJS">GitHub Repository</a></li>
-                    <li><a href="https://dwaithe.github.io/home/">Author's homepage</a></li>
+                    <li><a href="https://dwaithe.github.io/FCSfitJS/">Link to software</a></li>
+                    <li><a href="https://github.com/dwaithe/FCSfitJShttps://dwaithe.github.io/home/">Author's homepage</a></li>
                     <li><a href="https://twitter.com/dwaithe">Author's Twitter</a></li>
                    
                   </ol>
