--- a/manual/manual.html
+++ b/manual/manual.html
@@ -271,9 +271,9 @@ and
 where ACA<sub>01</sub> is the amplitude ratio of the first channel with respect to the second and  G<sub>N</sub><sup>AC0</sup>(0) is the amplitude measurement from the first autocorrelation channel and G<sub>N</sub><sup>AC1</sup>(0) is the same measurement from the second channel. ACCC<sub>01</sub> is similar but represents the amplitude ratio of the first channel to the amplitude calculated from cross-correlation function amplitude G<sub>N</sub><sup>CC01</sup>(0).
 </p>
 <p>
-[1] Waithe D., Clausen P. M., Sezgin E. Eggeling C., 2016. FoCuS-point: software for STED fluorescence correlation and time-gated single photon counting 
-[2] Waithe D., Schneider F., Chojnacki J., Clausen M.P. , Dilip Shrestha 2,  Bernardino de la Serna, J., Eggeling C., 2018. Optimized processing and analysis of conventional confocal microscopy generated scanning FCS data.
-[3] Haustein, E. and Schwille, P., 2004. Fluorescence correlation spectroscopy: an introduction to its concepts and applications. Biophysics Textbook Online.
+[1] Waithe D., Clausen P. M., Sezgin E. Eggeling C., 2016. FoCuS-point: software for STED fluorescence correlation and time-gated single photon counting <br>
+[2] Waithe D., Schneider F., Chojnacki J., Clausen M.P. , Dilip Shrestha 2,  Bernardino de la Serna, J., Eggeling C., 2018. Optimized processing and analysis of conventional confocal microscopy generated scanning FCS data.<br>
+[3] Haustein, E. and Schwille, P., 2004. Fluorescence correlation spectroscopy: an introduction to its concepts and applications. Biophysics Textbook Online.<br>
 </p>
 
           
