--- a/manual/manual.html
+++ b/manual/manual.html
@@ -138,7 +138,7 @@ The parameters afor the data-series can be exported to the clipboard (<strong>14
 
 <div class="row">
         <div class="col-md-3">
-          <img  src="images/Mainplot.png" class="img-fluid"><br>
+           <img  src="images/MainPlot.png" class="img-fluid"><br>
           <p>
            Figure 3) Main plot detail.
           </p>
@@ -162,7 +162,7 @@ The parameters afor the data-series can be exported to the clipboard (<strong>14
 
 <div class="row">
         <div class="col-md-3">
-          <img  src="images/DataViewer.png" class="img-fluid"><br>
+          <img  src="images/Dataviewer.png" class="img-fluid"><br>
            <p>
            Figure 3) Data Viewer detail.
           </p>
