--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ div.row {
         
 
        </div>
-  <div class="col-xl-2" style="min-width: 400px;">
+  <div class="col-xl-2" style="min-width: 450px;">
     <div class="card border-secondary ">
         <div class="card-header">Data Viewer</div>
         <div class="card-body" >
@@ -240,7 +240,14 @@ div.row {
             <div id="data-list" class="disable-select"   oncontextmenu="return false;" ></div>
          </div>
             <div class="disable-select">
-            ac: CH0 <input type="checkbox"  id="CH0_chbx" checked> CH1 <input type="checkbox" id="CH1_chbx" checked> cc:CH01 <input type="checkbox" id="CH01_chbx" checked> CH10 <input type="checkbox" id="CH10_chbx">
+            ac: CH1 <input type="checkbox"  id="CH1_chbx" checked> CH2 <input type="checkbox" id="CH2_chbx" checked> CH3 <input type="checkbox" id="CH3_chbx" checked> CH4 <input type="checkbox" id="CH4_chbx" checked>
+            </div>
+            <div class="disable-select">
+            CH12 <input type="checkbox"  id="CH12_chbx" checked> CH13 <input type="checkbox" id="CH13_chbx" checked>  CH14 <input type="checkbox" id="CH14_chbx" checked> CH23 <input type="checkbox" id="CH23_chbx" checked> CH24 <input type="checkbox" id="CH24_chbx" checked> CH34 <input type="checkbox" id="CH34_chbx" checked>
+            </div>
+
+            <div class="disable-select">
+            CH21 <input type="checkbox"  id="CH21_chbx" checked> CH31 <input type="checkbox" id="CH31_chbx" checked>  CH41 <input type="checkbox" id="CH41_chbx" checked> CH32 <input type="checkbox" id="CH32_chbx" checked> CH42 <input type="checkbox" id="CH42_chbx" checked> CH43 <input type="checkbox" id="CH43_chbx" checked>
             </div>
 
             <br>
