--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
 
 <link rel="stylesheet" href="scripts/d3.slider.css" />
 <link rel="stylesheet" href="scripts/bootstrap-4.1.3-dist/css/bootstrap.min.css" />
-<!-- <script src="{% static 'd3-simple-slider.min.js' %}"></script>-->
 <script src="scripts/d3-simple-slider.js"></script>
-<!-- <script src="{% static 'd3.v5.min.js' %}"></script>-->
 <script src="scripts/jquery-3.2.1.min.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
--->
-
 <script src="scripts/bootstrap-4.1.3-dist/JS/bootstrap.min.js"></script>
 <script src="scripts/d3.min.js"></script>
 <script src="scripts/d3fc.js"></script>
@@ -98,10 +93,12 @@ div.row {
 /*This is the view
 
 </style>
+<script type="text/javascript">document.body.style.zoom="80%";
+</script>
 <body >
 <div class="container-fluid">
 <div style="padding: 10px">
-<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#How to Cite">How to cite.</a></p>
+<h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#How to Cite">How to cite.</a><a href="download test data"></a></p>
 
 </div>
 <div class="row">
