--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ div.row {
 /*This is the view
 
 </style>
-<script type="text/javascript">document.body.style.zoom="80%";
-</script>
 <body >
+<script type="text/javascript">document.body.style.zoom="80%";</script>
+
 <div class="container-fluid">
 <div style="padding: 10px">
 <h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#How to Cite">How to cite.</a><a href="download test data"></a></p>
