--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link rel="stylesheet" href="scripts/d3.slider.css" />
+<!-- <link href="scripts/d3RangeSlider.css" rel="stylesheet"> -->
 <link rel="stylesheet" href="scripts/bootstrap-4.1.3-dist/css/bootstrap.min.css" />
 <script src="scripts/d3-simple-slider.js"></script>
+<!--<script src="scripts/d3RangeSlider.js"></script>-->
+
+    <!-- Range slider style -->
+
 <script src="scripts/jquery-3.2.1.min.js"></script>
 <script src="scripts/bootstrap-4.1.3-dist/JS/bootstrap.min.js"></script>
 <script src="scripts/d3.min.js"></script>
@@ -18,6 +23,9 @@
 
 <!-- load the d3.js library -->       
 <style> /* set the CSS */
+
+
+
 .disable-select {
     user-select: none; /* supported by Chrome and Opera */
    -webkit-user-select: none; /* Safari */
@@ -94,7 +102,15 @@ div.row {
 
 </style>
 <body >
-<script type="text/javascript">document.body.style.zoom="80%";</script>
+  <script type="text/javascript">
+    var scale = 'scale(0.9)';
+document.body.style.webkitTransform =  scale;    // Chrome, Opera, Safari
+ document.body.style.msTransform =   scale;       // IE 9
+ document.body.style.transform = scale;     // General
+
+
+  </script>
+
 
 <div class="container-fluid">
 <div style="padding: 10px">
@@ -212,7 +228,17 @@ div.row {
             <input type="submit" name="reset_plot" class="btn  btn-outline-primary btn-sm" id="reset_plot" value="Reset zoom" />
             <input type="submit" name="zoom_in" class="btn  btn-outline-primary btn-sm" id="zoom_in" value="Zoom in" />
             <input type="submit" name="zoom_out" class="btn  btn-outline-primary btn-sm" id="zoom_out" value="Zoom out" />
+          <div id="splash">
+            <br>
+            <H2> <- Upload your data to get started. </H2>
+            <br>
+            <H3>Or click <a href="test_data.zip">here</a> to download some example data, which you can analyse.</H3>
+            <H3> The data is zipped, please unzip it before trying to analyse.</H3>
+            </div>
           <div id="chart" style="width:800px;height:600px;left-padding:24px"></div>
+
+            
+        
 
           <label>Fit Slider Range: </label><div id="slider-range"></div>
           <p id="value-range"></p>
