--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@ div.ex1 {
   border-color: blue;
   border-width: 1;
   padding: 8px;
-  width: 380;
+  width: 300;
   height: 400px;
   overflow: scroll;
 }
 
 div.row {
   
-  padding: 24px;
+  padding: 2px;
 }
 .col-xl- {
   
-  padding: 8px;
+  padding: 3px;
 }
 .x-label {
   fill: black;
@@ -103,10 +103,10 @@ div.row {
 </style>
 <body >
   <script type="text/javascript">
-    var scale = 'scale(0.8)';
-document.body.style.webkitTransform =  scale;    // Chrome, Opera, Safari
- document.body.style.msTransform =   scale;       // IE 9
- document.body.style.transform = scale;     // General
+ //   var scale = 'scale(0.8)';
+//document.body.style.webkitTransform =  scale;    // Chrome, Opera, Safari
+// document.body.style.msTransform =   scale;       // IE 9
+// document.body.style.transform = scale;     // General
 
 
   </script>
@@ -118,7 +118,7 @@ document.body.style.webkitTransform =  scale;    // Chrome, Opera, Safari
 
 </div>
 <div class="row">
-  <div class="col-xl-3" style="min-width: 470px;">
+  <div class="col-xl-3" style="min-width: 470px;"  s>
         <div class="card border-secondary" mb-3>
         <div class="card-header">Fit Controls</div>
         <div class="card-body">
@@ -217,7 +217,7 @@ document.body.style.webkitTransform =  scale;    // Chrome, Opera, Safari
 </div>
       </div>
 
-       <div class=".col-xl-">
+       <div class=".col-xl-" style="min-width: 400px;">
         <div class="card border-secondary mb-3">
         <div class="card-header">Main plot</div>
         <div class="card-body">
@@ -232,10 +232,10 @@ document.body.style.webkitTransform =  scale;    // Chrome, Opera, Safari
             <br>
             <H2> <- Upload your data to get started. </H2>
             <br>
-            <H3>Or click <a href="test_data.zip">here</a> to download some example data, which you can analyse.</H3>
+            <H3>Or click <a href="test_data.zip">here</a> to download some example data.</H3>
             <H3> The data is zipped, please unzip it before trying to analyse.</H3>
             </div>
-          <div id="chart" style="width:800px;height:600px;left-padding:24px"></div>
+          <div id="chart" style="width:500;height:600px;left-padding:24px"></div>
 
             
         
