--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ $.get(url).done(data => {
 <h1 style="display: inline;">FoCuS-fit-JS</h1><p  style="display: inline;"> - <span id="version"></span> - Open source software for fitting correlated FCS (Fluorescence Correlated Spectroscopy) files - <a href="https://github.com/dwaithe/FCSfitJS"> Visit the Github repository</a> - <a href="https://dwaithe.github.io/FCSfitJS/manual/manual.html">Read the manual and documentation.</a> - <a href="https://github.com/dwaithe/FCSfitJS/#How to Cite">How to cite.</a><a href="download test data"></a></p>
 
 </div>
+<a id="downloadAnchorElem" style="display:none"></a>
+
+
 <div class="row">
   <div class="col-xl-3" style="min-width: 470px;"  s>
         <div class="card border-secondary" mb-3>
